--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,17 @@
+.intro {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #0f0a0a;
+}
 
+.intro_header {
+  position: absolute;
+  top: 40%;
+  padding: 0 35%;
+  font-size: 84px;
+  color: #da2525;
+  text-transform: uppercase;
+}
