--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,11 @@
 .intro {
+  position: absolute;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  position: absolute;
   top: 0;
   left: 0;
   background-color: #0f0a0a;
@@ -10,8 +14,68 @@
 .intro_header {
   position: absolute;
   top: 40%;
-  padding: 0 35%;
   font-size: 84px;
   color: #da2525;
   text-transform: uppercase;
+}
+
+.intro_key {
+  position: absolute;
+  bottom: 20px;
+  font-size: 22px;
+  color: #da2525;
+}
+
+.nickname{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  background-color: #0f0a0a;
+}
+
+.form_nickname{
+  position: absolute;
+  padding: 0;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  margin: 0 45%;
+  top: 40%;
+  font-size: 34px;
+  color: #da2525;
+} 
+
+.nickname_input {
+  text-align: center;
+  text-transform: uppercase;
+  outline: none;
+  width: 200px;
+  height: 20px;
+  margin-top: 20px;
+  border: 2px solid #da2525;
+  border-radius: 4px;
+  color: #da2525;
+  font-size: 16px;
+  background-color: #0f0a0a;
+}
+
+.nickname_button{
+  margin-top: 25px;
+  color: #130b0b;
+  font-weight: 800;
+  font-size: 18px;
+  border: none;
+  height: 30px;
+  width: 70px;
+  text-transform: uppercase;
+  border-radius: 2px;
+  outline: none;
+  background-color: #da2525;
+}
+
+.nickname_button:focus{
+  background-color: #bb1f1f;
 }
