--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Creepster');
+@import url('https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe');
+
 .intro {
   position: absolute;
   text-align: center;
@@ -39,6 +42,8 @@
 
 .form_nickname{
   position: absolute;
+  font-family: 'ZCOOL KuaiLe', cursive;
+  font-weight: 700;
   padding: 0;
   display: flex;
   flex-flow: column wrap;
@@ -50,6 +55,7 @@
 } 
 
 .nickname_input {
+  font-family: 'ZCOOL KuaiLe', cursive;
   text-align: center;
   text-transform: uppercase;
   outline: none;
@@ -68,11 +74,12 @@
   margin-top: 25px;
   color: #130b0b;
   font-weight: 800;
-  font-size: 18px;
+  font-size: 22px;
+  font-family: 'ZCOOL KuaiLe', cursive;
   border: 1px solid #da2525;
-  border-radius: 8px;
+  border-radius: 20%;
   height: 30px;
-  width: 70px;
+  width: 50px;
   text-transform: uppercase;
   outline: none;
   background-color: #da2525;
@@ -92,6 +99,7 @@
 
 .menu{
   position: absolute;
+  font-family: 'ZCOOL KuaiLe', cursive;
   width: 100%;
   height: 100%;
   display: flex;
@@ -135,6 +143,24 @@
   text-transform: uppercase;
   color: #bb1f1f;
 }
+
+.battle_player_name{
+  position: absolute;
+  display: inline-block;
+  top: 10px;
+  left: 10px;
+  font-size: 18px;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: #bb1f1f;
+}
+
+.battle_canvas{
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+}
+
 
 @keyframes blinker{
   80%{
