--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Creepster');
 @import url('https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe');
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 .intro {
   position: absolute;
   text-align: center;
@@ -156,9 +162,9 @@
 }
 
 .battle_canvas{
+  opacity: 0;
   width: 100%;
-  height: 100%;
-  border: 1px solid white;
+  overflow: hidden;
 }
 
 
